--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:theme="@style/Theme.MyToolbarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
             android:layout_marginBottom="4dp"
             android:text="@string/time"
             android:layout_marginTop="10dp"
-            android:textColor="@android:color/holo_blue_dark"
+            android:textColor="@color/app_color"
             android:textSize="16sp"
             />
 
