--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.MyNews" parent="Base.Theme.MyNews" />
+
+    <style name="Theme.MyToolbarTheme" parent="android:ThemeOverlay.Material.ActionBar">
+        <item name="tint">@color/app_color2</item>
+    </style>
+
 </resources>
